--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -5,11 +5,11 @@
 <div class="paginator">
 
 {% if next_page %}
-<p>{% icon fa-arrow-circle-o-right %} <a href="{{ site.baseurl }}{{ next_page.url }}">{{ next_page.title }}</a></p>
+<p><a href="{{ site.baseurl }}{{ next_page.url }}">{{ next_page.title }}</a></p>
 {% endif %}
 
 {% if previous_page %}
-<p>{% icon fa-arrow-circle-o-left %} <a href="{{ site.baseurl }}{{ previous_page.url }}">{{ previous_page.title }}</a></p>
+<p><a href="{{ site.baseurl }}{{ previous_page.url }}">{{ previous_page.title }}</a></p>
 {% endif %}
 
 </div>
